dark mode for nav/admin/merchant is fixed

--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -57,6 +57,7 @@ body {
             transform: translateY(-50%);
             border: none;
             cursor: pointer;
+            background: transparent;
         }
     }
 
@@ -115,7 +116,6 @@ body {
 }
 
 .main-nav {
-    background: $primary-color;
     padding: 1rem 0;
 
     ul {
@@ -126,7 +126,7 @@ body {
 
         a {
             text-decoration: none;
-            color: $white;
+            color: var(--primary-color-text);
             font-size: 0.9rem;
 
             &:hover {
@@ -301,4 +301,11 @@ body {
     }
   }
   
-  
+
+.darkMode {
+  background: $primary-color;
+}
+
+.lightMode {
+  background: $white;
+}
